[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A simple task bot for Slack."
license = "Apache-2.0/MIT"
name = "tri"
version = "0.1.0"

[[bin]]
doc = false
name = "tri"
path = "src/main.rs"

[dependencies]
chrono = "0.4.0"
dotenv = "0.10.1"
error-chain = "0.11.0"
log = "0.3.8"
pretty_env_logger = "0.1.1"
prettytable-rs = "0.6.7"
rayon = "0.8.2"
schedule = "0.1.0"
scheduled-executor = "0.3.0"
slack = "0.19.0"
void = "1.0.2"

[dependencies.diesel]
features = [
    "chrono",
    "sqlite",
]
version = "0.16.0"

[dependencies.diesel_codegen]
features = ["sqlite"]
version = "0.16.0"

[dependencies.nom]
features = ["verbose-errors"]
version = "3.2.1"
